# pynetro

./: .env.example  .gitignore  README.md  activate_env.sh  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: test.yml
src/pynetro/: __init__.py  client.py  http.py
tests/: README.md  __init__.py  aiohttp_client.py  conftest.py  generate_references.py  test_client.py  test_integration.py
tests/reference_data/: .gitignore  README.md  pixie_response_template.json  sensor_response_data_template.json  sensor_response_template.json  sprite_response_events_template.json  sprite_response_moistures_template.json  sprite_response_schedules_template.json  sprite_response_template.json
